# mcp-triage-mcp

./: .env.example  .gitignore  PLAN.md  README.md  docker-compose.yml
backend/: .env.example  pyproject.toml
backend/src/: config.py  main.py  mcp_client.py  openrouter_client.py
backend/src/routes/: chat.py  triage.py
backend/src/services/: chat_service.py  triage_service.py
scripts/: start.sh  stop_mac.sh
web/app/: layout.tsx  page.tsx
web/app/chat/: page.tsx
web/app/triage/: page.tsx
web/lib/: api.ts
