[project]
name = "planner-triage-backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.138.0",
    "fastmcp>=3.4.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.49.0",
]
